更新版本，調整樣式

--- a/book-history.html
+++ b/book-history.html
@@ -30,157 +30,95 @@
           <button class="actions-btn tab-item" id="tab3">已取消</button>
         </div>
         <div>
-          <div class="tab-content" data-id="tab1">
-            <div class="content-row item">
-              <div class="row-left row-2">
-                <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+          <div class="tab-content">
+            <div class="item">
+              <div class="content-row">
+                <div class="row-left row-2">
+                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                </div>
+                <div class="row-right row-8">
+                  <div class="ticket-no">取票序號<span>#123456789</span></div>
+                  <div class="movie-title">
+                    <p class="l-font">劫命救護</p>
+                    <span class="s-font">AMBULANCE</span>
+                  </div>
+                  <div class="booking-list content-row">
+                    <div class="row-5">
+                      <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
+                      <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
+                      <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
+                      <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
+                      <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                    </div>
+                    <div class="row-5">
+                      <div class="list"><label>付款金額</label><span>NT$660</span></div>
+                      <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="row-right row-8">
-                <div class="ticket-no">取票序號<span>#123456789</span></div>
-                <div class="movie-title">
-                  <p class="l-font ellipsis">劫命救護</p>
-                  <span class="s-font ellipsis">AMBULANCE</span>
-                </div>
-                <div class="booking-list content-row">
-                  <div class="row-5">
-                    <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                    <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                    <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                    <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
-                    <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
-                  </div>
-                  <div class="row-5">
-                    <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                    <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                    <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
-                  </div>
-                </div>
-                <div class="ticket-state">
-                  <div class="state paid">已付款<span class="material-icons">
-                    done
+              <div class="ticket-state">
+                <div class="state collapse">訂單收起<span class="material-icons">
+                    remove
                   </span></div>
-                  <div class="state getQR">取票碼<span class="material-icons">
-                    qr_code
-                  </span></div>
-                  <div class="state refund">退票<span class="material-icons">
+                <div class="state refund">整筆退票<span class="material-icons">
                     close
                   </span></div>
-                </div>
               </div>
-            </div>
-            <div class="content-row item">
-              <div class="row-left row-2">
-                <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
-              </div>
-              <div class="row-right row-8">
-                <div class="ticket-no">取票序號<span>#123456789</span></div>
-                <div class="movie-title">
-                  <p class="l-font ellipsis">30歳まで童貞だと魔法使いになれるらしい</p>
-                  <span class="s-font ellipsis">Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!</span>
-                </div>
-                <div class="booking-list content-row">
-                  <div class="row-5">
-                    <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                    <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                    <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                    <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
-                    <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+                <div class="ticket-info">
+                  <div class="row-left row-2">
+                    <span>全票</span>
                   </div>
-                  <div class="row-5">
-                    <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                    <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                    <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                  <div class="row-right row-8">
+                    <div class="booking-list content-row">
+                      <div class="row-5">
+                        <div class="list"><label>影城座位</label><span>12-11</span></div>
+                        <div class="list"><label>電影票號</label><span>2845254102</span></div>
+                        <div class="list"><label>套票餐點</label><span>中爆米花</span></div>
+                      </div>
+                    </div>
+                    <div class="ticket-state">
+                      <div class="state refund">整筆退票<span class="material-icons">
+                          close
+                        </span></div>
+                    </div>
                   </div>
                 </div>
-                <div class="ticket-state">
-                  <div class="state paid">已付款<span class="material-icons">
-                      done
-                    </span></div>
-                  <div class="state getQR">取票碼<span class="material-icons">
-                      qr_code
-                    </span></div>
-                  <div class="state refund">退票<span class="material-icons">
-                      close
-                    </span></div>
+            </div>  
+            <div class="item">
+              <div class="content-row">
+                <div class="row-left row-2">
+                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="tab-content hide" data-id="tab2">
-            <div class="content-row item">
-              <div class="row-left row-2">
-                <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
-              </div>
-              <div class="row-right row-8">
-                <div class="ticket-no">取票序號<span>#789456123</span></div>
-                <div class="movie-title">
-                  <p class="l-font ellipsis">劫命救護</p>
-                  <span class="s-font ellipsis">AMBULANCE</span>
-                </div>
-                <div class="booking-list content-row">
-                  <div class="row-5">
-                    <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                    <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                    <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                    <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
-                    <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
+                <div class="row-right row-8">
+                  <div class="ticket-no">取票序號<span>#123456789</span></div>
+                  <div class="movie-title">
+                  <p class="l-font">30歳まで童貞だと魔法使いになれるらしい</p>
+                  <span class="s-font">Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!</span>
                   </div>
-                  <div class="row-5">
-                    <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                    <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                    <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                  <div class="booking-list content-row">
+                    <div class="row-5">
+                      <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
+                      <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
+                      <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
+                      <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
+                      <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                    </div>
+                    <div class="row-5">
+                      <div class="list"><label>付款金額</label><span>NT$660</span></div>
+                      <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                    </div>
+                  </div>
+                  <div class="ticket-state">
+                    <div class="state collapse">訂單收起<span class="material-icons">
+                        remove
+                      </span></div>
+                    <div class="state refund">整筆退票<span class="material-icons">
+                        close
+                      </span></div>
                   </div>
                 </div>
-                <div class="ticket-state">
-                  <div class="state paid">已付款<span class="material-icons">
-                      done
-                    </span></div>
-                  <div class="state getQR">取票碼<span class="material-icons">
-                      qr_code
-                    </span></div>
-                  <div class="state refund">退票<span class="material-icons">
-                      close
-                    </span></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="tab-content hide" data-id="tab3">
-            <div class="content-row item">
-              <div class="row-left row-2">
-                <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
-              </div>
-              <div class="row-right row-8">
-                <div class="ticket-no">取票序號<span>#456123789</span></div>
-                <div class="movie-title">
-                  <p class="l-font ellipsis">劫命救護</p>
-                  <span class="s-font ellipsis">AMBULANCE</span>
-                </div>
-                <div class="booking-list content-row">
-                  <div class="row-5">
-                    <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                    <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                    <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                    <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
-                    <div class="list"><label>影城座位</label><span>12-07,12-8,12-09,12-11,12-12</span></div>
-                  </div>
-                  <div class="row-5">
-                    <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                    <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                    <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
-                  </div>
-                </div>
-                <div class="ticket-state">
-                  <div class="state paid">已付款<span class="material-icons">
-                      done
-                    </span></div>
-                  <div class="state getQR">取票碼<span class="material-icons">
-                      qr_code
-                    </span></div>
-                  <div class="state refund">退票<span class="material-icons">
-                      close
-                    </span></div>
-                </div>
+                
               </div>
             </div>
           </div>
