--- a/book-history.html
+++ b/book-history.html
@@ -1,141 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>BROADWAY CINEMAS - 百老匯影城</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/global.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/page.min.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <title>BROADWAY CINEMAS - 百老匯影城</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/global.min.css" />
-  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/page.min.css" />
+  <body id="app">
+    <!-- header -->
+    <nav-header></nav-header>
 
-</head>
-
-<body   id="app">
-  <!-- header -->
-  <nav-header></nav-header>
-
-  <!-- main container -->
-  <main  class="section-box">
-    <section class="section">
-      <div class="content booking-history">
-        <div class="main-title l-font">
-          <div class="s-font">BOOKING HISTORY</div>
-          <div>訂票查詢與取消</div>
-        </div>
-        <div class="actions">
-          <button class="actions-btn tab-item active" id="tab1" >尚未取票</button>
-          <button class="actions-btn tab-item" id="tab2">完成觀看</button>
-          <button class="actions-btn tab-item" id="tab3">已取消</button>
-        </div>
-        <div>
-          <div class="tab-content">
-            <div class="item">
-              <div class="content-row">
-                <div class="row-left row-2">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
-                </div>
-                <div class="row-right row-8">
-                  <div class="ticket-no">取票序號<span>#123456789</span></div>
-                  <div class="movie-title">
-                    <p class="l-font">劫命救護</p>
-                    <span class="s-font">AMBULANCE</span>
-                  </div>
-                  <div class="booking-list content-row">
-                    <div class="row-5">
-                      <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                      <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                      <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                      <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
-                      <div class="list"><label>票卷數量</label><span>共2張</span></div>
-                    </div>
-                    <div class="row-5">
-                      <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                      <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="ticket-state">
-                <div class="state collapse">訂單收起<span class="material-icons">
-                    remove
-                  </span></div>
-                <div class="state refund">整筆退票<span class="material-icons">
-                    close
-                  </span></div>
-              </div>
-                <div class="ticket-info">
+    <!-- main container -->
+    <main class="section-box">
+      <section class="section">
+        <div class="content booking-history">
+          <div class="main-title l-font">
+            <div class="s-font">BOOKING HISTORY</div>
+            <div>訂票查詢與取消</div>
+          </div>
+          <div class="actions">
+            <button class="actions-btn tab-item active" id="tab1">
+              尚未取票
+            </button>
+            <button class="actions-btn tab-item" id="tab2">完成觀看</button>
+            <button class="actions-btn tab-item" id="tab3">已取消</button>
+          </div>
+          <div>
+            <div class="tab-content">
+              <div class="item">
+                <div class="content-row">
                   <div class="row-left row-2">
-                    <span>全票</span>
+                    <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
                   </div>
                   <div class="row-right row-8">
+                    <div class="ticket-no">取票序號<span>#123456789</span></div>
+                    <div class="movie-title">
+                      <p class="l-font">劫命救護</p>
+                      <span class="s-font">AMBULANCE</span>
+                    </div>
                     <div class="booking-list content-row">
                       <div class="row-5">
-                        <div class="list"><label>影城座位</label><span>12-11</span></div>
-                        <div class="list"><label>電影票號</label><span>2845254102</span></div>
-                        <div class="list"><label>套票餐點</label><span>中爆米花</span></div>
+                        <div class="list">
+                          <label>觀看影城</label><span>台北公館百老匯</span>
+                        </div>
+                        <div class="list">
+                          <label>觀看時間</label><span>2022.08.08 星期一</span>
+                        </div>
+                        <div class="list">
+                          <label>電影場次</label
+                          ><span>12:30 標準數位 | 第12聽</span>
+                        </div>
+                        <div class="list">
+                          <label>電影票種</label
+                          ><span>全票x1,優待票x3,愛心票x1</span>
+                        </div>
+                        <div class="list">
+                          <label>票卷數量</label><span>共2張</span>
+                        </div>
+                      </div>
+                      <div class="row-5">
+                        <div class="list">
+                          <label>付款金額</label><span>NT$660</span>
+                        </div>
+                        <div class="list">
+                          <label>訂單時間</label
+                          ><span>2022.12.11 22:25:06</span>
+                        </div>
                       </div>
                     </div>
-                    <div class="ticket-state">
-                      <div class="state refund">整筆退票<span class="material-icons">
-                          close
-                        </span></div>
-                    </div>
                   </div>
                 </div>
-            </div>  
-            <div class="item">
-              <div class="content-row">
-                <div class="row-left row-2">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                <div class="ticket-state">
+                  <div class="state collapse">
+                    訂單收起<span class="material-icons"> remove </span>
+                  </div>
+                  <div class="state refund">
+                    整筆退票<span class="material-icons"> close </span>
+                  </div>
                 </div>
-                <div class="row-right row-8">
-                  <div class="ticket-no">取票序號<span>#123456789</span></div>
-                  <div class="movie-title">
-                  <p class="l-font">30歳まで童貞だと魔法使いになれるらしい</p>
-                  <span class="s-font">Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!</span>
-                  </div>
-                  <div class="booking-list content-row">
-                    <div class="row-5">
-                      <div class="list"><label>觀看影城</label><span>台北公館百老匯</span></div>
-                      <div class="list"><label>觀看時間</label><span>2022.08.08 星期一</span></div>
-                      <div class="list"><label>電影場次</label><span>12:30 標準數位 | 第12聽</span></div>
-                      <div class="list"><label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span></div>
-                      <div class="list"><label>票卷數量</label><span>共2張</span></div>
+                <div class="ticket-info">
+                  <div class="content-row info-item">
+                    <div class="row-left row-2">
+                      <span>全票</span>
                     </div>
-                    <div class="row-5">
-                      <div class="list"><label>付款金額</label><span>NT$660</span></div>
-                      <div class="list"><label>訂單時間</label><span>2022.12.11 22:25:06</span></div>
+                    <div class="row-right row-8">
+                      <div class="booking-list content-row">
+                        <div class="row-5">
+                          <div class="list">
+                            <label>影城座位</label><span>12-11</span>
+                          </div>
+                          <div class="list">
+                            <label>電影票號</label><span>2845254102</span>
+                          </div>
+                          <div class="list">
+                            <label>套票餐點</label><span>中爆米花</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ticket-state">
+                        <div class="state refund">
+                          整筆退票<span class="material-icons"> close </span>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <div class="ticket-state">
-                    <div class="state collapse">訂單收起<span class="material-icons">
-                        remove
-                      </span></div>
-                    <div class="state refund">整筆退票<span class="material-icons">
-                        close
-                      </span></div>
+                  <div class="content-row info-item">
+                    <div class="row-left row-2">
+                      <span>全票</span>
+                    </div>
+                    <div class="row-right row-8">
+                      <div class="booking-list content-row">
+                        <div class="row-5">
+                          <div class="list">
+                            <label>影城座位</label><span>12-11</span>
+                          </div>
+                          <div class="list">
+                            <label>電影票號</label><span>2845254102</span>
+                          </div>
+                          <div class="list">
+                            <label>套票餐點</label><span>中爆米花</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ticket-state">
+                        <div class="state refund">
+                          整筆退票<span class="material-icons"> close </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="content-row info-item">
+                    <div class="row-left row-2">
+                      <span>全票</span>
+                    </div>
+                    <div class="row-right row-8">
+                      <div class="booking-list content-row">
+                        <div class="row-5">
+                          <div class="list">
+                            <label>影城座位</label><span>12-11</span>
+                          </div>
+                          <div class="list">
+                            <label>電影票號</label><span>2845254102</span>
+                          </div>
+                          <div class="list">
+                            <label>套票餐點</label><span>中爆米花</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ticket-state">
+                        <div class="state refund">
+                          整筆退票<span class="material-icons"> close </span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 
               </div>
+              <div class="item">
+                <div class="content-row">
+                  <div class="row-left row-2">
+                    <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
+                  </div>
+                  <div class="row-right row-8">
+                    <div class="ticket-no">取票序號<span>#123456789</span></div>
+                    <div class="movie-title">
+                      <p class="l-font">
+                        30歳まで童貞だと魔法使いになれるらしい
+                      </p>
+                      <span class="s-font"
+                        >Cherry Magic! Thirty Years of Virginity Can Make You a
+                        Wizard?!</span
+                      >
+                    </div>
+                    <div class="booking-list content-row">
+                      <div class="row-5">
+                        <div class="list">
+                          <label>觀看影城</label><span>台北公館百老匯</span>
+                        </div>
+                        <div class="list">
+                          <label>觀看時間</label><span>2022.08.08 星期一</span>
+                        </div>
+                        <div class="list">
+                          <label>電影場次</label
+                          ><span>12:30 標準數位 | 第12聽</span>
+                        </div>
+                        <div class="list">
+                          <label>電影票種</label
+                          ><span>全票x1,優待票x3,愛心票x1</span>
+                        </div>
+                        <div class="list">
+                          <label>票卷數量</label><span>共2張</span>
+                        </div>
+                      </div>
+                      <div class="row-5">
+                        <div class="list">
+                          <label>付款金額</label><span>NT$660</span>
+                        </div>
+                        <div class="list">
+                          <label>訂單時間</label
+                          ><span>2022.12.11 22:25:06</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="ticket-state">
+                      <div class="state collapse">
+                        訂單收起<span class="material-icons"> remove </span>
+                      </div>
+                      <div class="state refund">
+                        整筆退票<span class="material-icons"> close </span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-  </main>
-  <!-- main container -->
-  
-  <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
-  
-  <!-- footer -->
-  <bottom-footer></bottom-footer>
+      </section>
+    </main>
+    <!-- main container -->
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/vue.js"></script>
-  <script src="js/index.js"></script>
+    <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
 
-</body>
+    <!-- footer -->
+    <bottom-footer></bottom-footer>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/index.js"></script>
+  </body>
 </html>
