調整頁面 及 CSS

--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
         </div>
         <div class="tab-container">
           <div class="content-row">
-            <div class="row-5">
+            <div class="row-left row-5">
               <img src="https://fakeimg.pl/450x250/" alt="" />
             </div>
-            <div class="row-5">
+            <div class="row-right row-5">
               <img src="https://fakeimg.pl/450x250/" alt="" />
             </div>
           </div>
@@ -64,7 +64,7 @@
             <div class="main-title l-font">
               <div>影城特色</div>
             </div>
-            <div>
+            <div class="info-container">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, rerum. Non voluptas voluptatum, sapiente
               labore numquam obcaecati nulla pariatur. Hic doloribus quos quaerat aspernatur optio dicta, delectus rerum
               provident iste assumenda eum quis fugit? Veniam reiciendis quam ex incidunt laborum, omnis totam placeat
@@ -82,68 +82,71 @@
             <div class="main-title l-font">
               <div>影廳座位及無障礙設施數量</div>
             </div>
-            <div class="table">
-              <div class="table-tr">
-                <div class="table-th">電影影廳</div>
-                <div class="table-th">第1廳</div>
-                <div class="table-th">第2聽</div>
-                <div class="table-th">第3廳</div>
-                <div class="table-th">第4聽</div>
-                <div class="table-th">第5廳</div>
-                <div class="table-th">第6聽</div>
-                <div class="table-th">第7廳</div>
-                <div class="table-th">第8聽</div>
-                <div class="table-th">第9廳</div>
-                <div class="table-th">第10聽</div>
-                <div class="table-th">第11廳</div>
-                <div class="table-th">第12聽</div>
-              </div>
-              <div class="table-tr">
-                <div class="table-td">座位排數</div>
-                <div class="table-td">10</div>
-                <div class="table-td">1</div>
-                <div class="table-td">12</div>
-                <div class="table-td">9</div>
-                <div class="table-td">8</div>
-                <div class="table-td">10</div>
-                <div class="table-td">12</div>
-                <div class="table-td">11</div>
-                <div class="table-td">9</div>
-                <div class="table-td">11</div>
-                <div class="table-td">12</div>
-                <div class="table-td">12</div>
-              </div>
-              <div class="table-tr">
-                <div class="table-td">座位總數</div>
-                <div class="table-td">50</div>
-                <div class="table-td">35</div>
-                <div class="table-td">60</div>
-                <div class="table-td">35</div>
-                <div class="table-td">35</div>
-                <div class="table-td">60</div>
-                <div class="table-td">104</div>
-                <div class="table-td">72</div>
-                <div class="table-td">81</div>
-                <div class="table-td">100</div>
-                <div class="table-td">120</div>
-                <div class="table-td">144</div>
-              </div>
-              <div class="table-tr">
-                <div class="table-td">愛心位數</div>
-                <div class="table-td">1</div>
-                <div class="table-td">2</div>
-                <div class="table-td">1</div>
-                <div class="table-td">1</div>
-                <div class="table-td">1</div>
-                <div class="table-td">2</div>
-                <div class="table-td">3</div>
-                <div class="table-td">2</div>
-                <div class="table-td">1</div>
-                <div class="table-td">1</div>
-                <div class="table-td">1</div>
-                <div class="table-td">2</div>
-              </div>
+            <div class="info-container facility">
+                  <div class="table">
+                    <div class="table-tr">
+                      <div class="table-th">電影影廳</div>
+                      <div class="table-th">第1廳</div>
+                      <div class="table-th">第2聽</div>
+                      <div class="table-th">第3廳</div>
+                      <div class="table-th">第4聽</div>
+                      <div class="table-th">第5廳</div>
+                      <div class="table-th">第6聽</div>
+                      <div class="table-th">第7廳</div>
+                      <div class="table-th">第8聽</div>
+                      <div class="table-th">第9廳</div>
+                      <div class="table-th">第10聽</div>
+                      <div class="table-th">第11廳</div>
+                      <div class="table-th">第12聽</div>
+                    </div>
+                    <div class="table-tr">
+                      <div class="table-td">座位排數</div>
+                      <div class="table-td">10</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">12</div>
+                      <div class="table-td">9</div>
+                      <div class="table-td">8</div>
+                      <div class="table-td">10</div>
+                      <div class="table-td">12</div>
+                      <div class="table-td">11</div>
+                      <div class="table-td">9</div>
+                      <div class="table-td">11</div>
+                      <div class="table-td">12</div>
+                      <div class="table-td">12</div>
+                    </div>
+                    <div class="table-tr">
+                      <div class="table-td">座位總數</div>
+                      <div class="table-td">50</div>
+                      <div class="table-td">35</div>
+                      <div class="table-td">60</div>
+                      <div class="table-td">35</div>
+                      <div class="table-td">35</div>
+                      <div class="table-td">60</div>
+                      <div class="table-td">104</div>
+                      <div class="table-td">72</div>
+                      <div class="table-td">81</div>
+                      <div class="table-td">100</div>
+                      <div class="table-td">120</div>
+                      <div class="table-td">144</div>
+                    </div>
+                    <div class="table-tr">
+                      <div class="table-td">愛心位數</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">2</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">2</div>
+                      <div class="table-td">3</div>
+                      <div class="table-td">2</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">1</div>
+                      <div class="table-td">2</div>
+                    </div>
+                  </div>
             </div>
+        
           </div>
         </div>
       </div>
