--- a/book-history.html
+++ b/book-history.html
@@ -91,7 +91,7 @@
                 <div class="ticket-info">
                   <div class="content-row info-item">
                     <div class="row-left row-2">
-                      <span>全票</span>
+                      <span>全 票</span>
                     </div>
                     <div class="row-right row-8">
                       <div class="booking-list content-row">
@@ -109,14 +109,14 @@
                       </div>
                       <div class="ticket-state">
                         <div class="state refund">
-                          整筆退票<span class="material-icons"> close </span>
+                          單筆退票<span class="material-icons"> close </span>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="content-row info-item">
                     <div class="row-left row-2">
-                      <span>全票</span>
+                      <span>優 待 票</span>
                     </div>
                     <div class="row-right row-8">
                       <div class="booking-list content-row">
@@ -134,14 +134,14 @@
                       </div>
                       <div class="ticket-state">
                         <div class="state refund">
-                          整筆退票<span class="material-icons"> close </span>
+                          單筆退票<span class="material-icons"> close </span>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="content-row info-item">
                     <div class="row-left row-2">
-                      <span>全票</span>
+                      <span>單 人 套 票</span>
                     </div>
                     <div class="row-right row-8">
                       <div class="booking-list content-row">
@@ -159,7 +159,7 @@
                       </div>
                       <div class="ticket-state">
                         <div class="state refund">
-                          整筆退票<span class="material-icons"> close </span>
+                          單筆退票<span class="material-icons"> close </span>
                         </div>
                       </div>
                     </div>
@@ -178,10 +178,8 @@
                       <p class="l-font">
                         30歳まで童貞だと魔法使いになれるらしい
                       </p>
-                      <span class="s-font"
-                        >Cherry Magic! Thirty Years of Virginity Can Make You a
-                        Wizard?!</span
-                      >
+                      <span class="s-font">Cherry Magic! Thirty Years of Virginity Can Make You a
+                        Wizard?!</span>
                     </div>
                     <div class="booking-list content-row">
                       <div class="row-5">
@@ -192,12 +190,10 @@
                           <label>觀看時間</label><span>2022.08.08 星期一</span>
                         </div>
                         <div class="list">
-                          <label>電影場次</label
-                          ><span>12:30 標準數位 | 第12聽</span>
+                          <label>電影場次</label><span>12:30 標準數位 | 第12聽</span>
                         </div>
                         <div class="list">
-                          <label>電影票種</label
-                          ><span>全票x1,優待票x3,愛心票x1</span>
+                          <label>電影票種</label><span>全票x1,優待票x3,愛心票x1</span>
                         </div>
                         <div class="list">
                           <label>票卷數量</label><span>共2張</span>
@@ -208,21 +204,98 @@
                           <label>付款金額</label><span>NT$660</span>
                         </div>
                         <div class="list">
-                          <label>訂單時間</label
-                          ><span>2022.12.11 22:25:06</span>
+                          <label>訂單時間</label><span>2022.12.11 22:25:06</span>
                         </div>
-                      </div>
-                    </div>
-                    <div class="ticket-state">
-                      <div class="state collapse">
-                        訂單收起<span class="material-icons"> remove </span>
-                      </div>
-                      <div class="state refund">
-                        整筆退票<span class="material-icons"> close </span>
                       </div>
                     </div>
                   </div>
                 </div>
+                <div class="ticket-state">
+                  <div class="state collapse">
+                    訂單收起<span class="material-icons"> remove </span>
+                  </div>
+                  <div class="state refund">
+                    整筆退票<span class="material-icons"> close </span>
+                  </div>
+                </div>
+                <div class="ticket-info">
+                  <div class="content-row info-item">
+                    <div class="row-left row-2">
+                      <span>全 票</span>
+                    </div>
+                    <div class="row-right row-8">
+                      <div class="booking-list content-row">
+                        <div class="row-5">
+                          <div class="list">
+                            <label>影城座位</label><span>12-11</span>
+                          </div>
+                          <div class="list">
+                            <label>電影票號</label><span>2845254102</span>
+                          </div>
+                          <div class="list">
+                            <label>套票餐點</label><span>中爆米花</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ticket-state">
+                        <div class="state refund">
+                          單筆退票<span class="material-icons"> close </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="content-row info-item">
+                    <div class="row-left row-2">
+                      <span>優 待 票</span>
+                    </div>
+                    <div class="row-right row-8">
+                      <div class="booking-list content-row">
+                        <div class="row-5">
+                          <div class="list">
+                            <label>影城座位</label><span>12-11</span>
+                          </div>
+                          <div class="list">
+                            <label>電影票號</label><span>2845254102</span>
+                          </div>
+                          <div class="list">
+                            <label>套票餐點</label><span>中爆米花</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ticket-state">
+                        <div class="state refund">
+                          單筆退票<span class="material-icons"> close </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="content-row info-item">
+                    <div class="row-left row-2">
+                      <span>單 人 套 票</span>
+                    </div>
+                    <div class="row-right row-8">
+                      <div class="booking-list content-row">
+                        <div class="row-5">
+                          <div class="list">
+                            <label>影城座位</label><span>12-11</span>
+                          </div>
+                          <div class="list">
+                            <label>電影票號</label><span>2845254102</span>
+                          </div>
+                          <div class="list">
+                            <label>套票餐點</label><span>中爆米花</span>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="ticket-state">
+                        <div class="state refund">
+                          單筆退票<span class="material-icons"> close </span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              
               </div>
             </div>
           </div>
@@ -241,3 +314,5 @@
     <script src="js/index.js"></script>
   </body>
 </html>
+
+
