訂票頁面調整 table RWD修正 增加頁面

--- a/book-step1.html
+++ b/book-step1.html
@@ -86,7 +86,8 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th sale"><span class="material-icons"> featured_play_list </span>優惠套票<small>表單可向右滑動</small></div>
+                  <div class="table-th"><span class="material-icons"> featured_play_list
+                    </span>優惠套票<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -96,12 +97,12 @@
                     <div class="table-th">小計</div>
                   </div>
                   <div class="table-tr ticket-set">
-                    <div class="table-td type">雙人電影套票<div class="s-font">電影票 X2、中爆米花 X1、中可樂 X1</div>
+                    <div class="table-td type">雙人電影套票<div class="s-font">電影票 X2、中爆米花 X1、中可樂 X2</div>
                     </div>
                     <div class="table-td">NT$777</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number" min="0">
+                      <span class="number">10</span>
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$7777</div>
@@ -112,7 +113,7 @@
                     <div class="table-td">NT$333</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number" min="0">
+                      <span class="number">10</span>
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3333</div>
@@ -123,7 +124,8 @@
             <div class="package">
               <div class="table">
                 <div class="table-tr package-title l-font">
-                  <div class="table-th"><span class="material-icons"> featured_play_list </span>一般票種<small>表單可向右滑動</small></div>
+                  <div class="table-th"><span class="material-icons"> featured_play_list
+                    </span>一般票種<small>表單可向右滑動</small></div>
                 </div>
                 <div class="package-content">
                   <div class="table-tr s-font">
@@ -137,7 +139,7 @@
                     <div class="table-td">NT$300</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number" min="0">
+                      <span class="number">10</span>
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3000</div>
@@ -148,7 +150,7 @@
                     <div class="table-td">NT$270</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number" min="0">
+                      <span class="number">10</span>
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3333</div>
@@ -159,10 +161,46 @@
                     <div class="table-td">NT$160</div>
                     <div class="table-td ticket-sheet">
                       <span class="minus">-</span>
-                      <input type="number" min="0">
+                      <span class="number">10</span>
                       <span class="plus">+</span>
                     </div>
                     <div class="table-td">NT$3333</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="package">
+              <div class="table">
+                <div class="table-tr package-title l-font">
+                  <div class="table-th"><span class="material-icons"> featured_play_list
+                    </span>臨櫃換票<small>表單可向右滑動</small></div>
+                </div>
+                <div class="package-content">
+                  <div class="table-tr s-font">
+                    <div class="table-th">票種</div>
+                    <div class="table-th">單價</div>
+                    <div class="table-th">數量</div>
+                    <div class="table-th">小計</div>
+                  </div>
+                  <div class="table-tr ticket-set">
+                    <div class="table-td type">團體優待券</div>
+                    <div class="table-td">NT$0</div>
+                    <div class="table-td ticket-sheet">
+                      <span class="minus">-</span>
+                      <span class="number">10</span>
+                      <span class="plus">+</span>
+                    </div>
+                    <div class="table-td">NT$0</div>
+                  </div>
+                  <div class="table-tr ticket-set">
+                    <div class="table-td type">影城招待券</div>
+                    <div class="table-td">NT$0</div>
+                    <div class="table-td ticket-sheet">
+                      <span class="minus">-</span>
+                      <span class="number">10</span>
+                      <span class="plus">+</span>
+                    </div>
+                    <div class="table-td">NT$0</div>
                   </div>
                 </div>
               </div>
