--- a/movies.html
+++ b/movies.html
@@ -24,11 +24,10 @@
           <div>現正熱映</div>
         </div>
         <div class="tab actions">
-          <button class="actions-btn tab-item active" id="tab1">現正熱映</button>
-          <button class="actions-btn tab-item" id="tab2">近期上映</button>
+          <button class="actions-btn tab-item active" >現正熱映</button>
+          <button class="actions-btn tab-item">近期上映</button>
         </div>
-        <div class="tab-container">
-          <div class="tab-content" data-id="tab1">
+          <div class="tab-content">
           <div class="content-row">
             <div class="showing-list row-2">
               <a href="">
@@ -108,89 +107,6 @@
               <div class="s-font">上映日期 2022-03-25</div>
             </a>
           </div>
-          </div>
-          </div>
-          <div class="tab-content hide" data-id="tab2">
-            <div class="content-row">
-              <div class="showing-list row-2">
-                <a href="">
-                  <div class="poster">
-                    <img src="https://fakeimg.pl/250x350/" alt="" />
-                  </div>
-                  <div class="movie-title l-font mul-ellipsis-1">
-                    <p class="l-font ellipsis">劫命救護</p>
-                    <span class="s-font ellipsis">AMBULANCE</span>
-                  </div>
-                  <div class="movie-level s-font y15">輔15級</div>
-                  <div class="s-font">上映日期 2022-03-25</div>
-                </a>
-              </div>
-              <div class="showing-list row-2">
-                <a href="">
-                  <div class="poster">
-                    <img src="https://fakeimg.pl/250x350/" alt="" />
-                  </div>
-                  <div class="movie-title l-font mul-ellipsis-1">
-                    <p class="l-font ellipsis">如果30歲還是處男，似乎就能成為魔法師</p>
-                    <span class="s-font ellipsis">Cherry Magic! Thirty Years Of Virginity Can Make You A Wizard ?!</span>
-                  </div>
-                  <div class="movie-level s-font yn">普遍級</div>
-                  <div class="s-font">上映日期 2022-03-25</div>
-                </a>
-              </div>
-              <div class="showing-list row-2">
-                <a href="">
-                  <div class="poster">
-                    <img src="https://fakeimg.pl/250x350/" alt="" />
-                  </div>
-                  <div class="movie-title l-font mul-ellipsis-1">
-                    <p class="l-font ellipsis">劫命救護</p>
-                    <span class="s-font ellipsis">AMBULANCE</span>
-                  </div>
-                  <div class="movie-level s-font y15">輔15級</div>
-                  <div class="s-font">上映日期 2022-03-25</div>
-                </a>
-              </div>
-              <div class="showing-list row-2">
-                <a href="">
-                  <div class="poster">
-                    <img src="https://fakeimg.pl/250x350/" alt="" />
-                  </div>
-                  <div class="movie-title l-font mul-ellipsis-1">
-                    <p class="l-font ellipsis">劫命救護</p>
-                    <span class="s-font ellipsis">AMBULANCE</span>
-                  </div>
-                  <div class="movie-level s-font y15">輔15級</div>
-                  <div class="s-font">上映日期 2022-03-25</div>
-                </a>
-              </div>
-              <div class="showing-list row-2">
-                <a href="">
-                  <div class="poster">
-                    <img src="https://fakeimg.pl/250x350/" alt="" />
-                  </div>
-                  <div class="movie-title l-font mul-ellipsis-1">
-                    <p class="l-font ellipsis">劫命救護</p>
-                    <span class="s-font ellipsis">AMBULANCE</span>
-                  </div>
-                  <div class="movie-level s-font y15">輔15級</div>
-                  <div class="s-font">上映日期 2022-03-25</div>
-                </a>
-              </div>
-            <div class="showing-list row-2">
-              <a href="">
-                <div class="poster">
-                  <img src="https://fakeimg.pl/250x350/" alt="" />
-                </div>
-                <div class="movie-title l-font mul-ellipsis-1">
-                  <p class="l-font ellipsis">劫命救護</p>
-                  <span class="s-font ellipsis">AMBULANCE</span>
-                </div>
-                <div class="movie-level s-font y15">輔15級</div>
-                <div class="s-font">上映日期 2022-03-25</div>
-              </a>
-            </div>
-            </div>
           </div>
         </div>
       </div>
