--- a/book.html
+++ b/book.html
@@ -25,11 +25,10 @@
           <div>場次資訊</div>
         </div>
         <div class="actions">
-          <button class="actions-btn tab-item active" id="tab1">公館百老匯影城</button>
-          <button class="actions-btn tab-item" id="tab2">新竹百老匯影城</button>
+          <button class="actions-btn tab-item active">公館百老匯影城</button>
+          <button class="actions-btn tab-item">新竹百老匯影城</button>
         </div>
-        <div>
-          <div class="tab-content" data-id="tab1">
+          <div class="tab-content">
             <div class="content-row">
               <div class="row-left row-6">
                 <div class="movie-item row-4">
@@ -70,70 +69,37 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <div class="time disable"><a class="" href="">09:00</a></div>
-                  <div class="time active"><a class="" href="book-step1.html">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
+                  <div class="time disable"><span>09:00</span></div>
+                  <div class="time active"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                  <div class="time"><span>09:00</span></div>
+                </div>
+                <div class="actions">
+                  <button class="quick-view">
+                    <a href="quick-view.html" target="_blank">
+                      <span><small>QUICK VIEW</small>預覽座位</span>
+                      <span class="material-icons">
+                        chair
+                      </span>
+                    </a>
+                 </button>
+                  <button class="buy-ticket">
+                    <a href="book-step1.html">
+                    <span><small>BUY TICKET</small>前往訂票</span>
+                    <span class="material-icons">
+                    confirmation_number
+                  </span>
+                  </a>
+                </button>
                 </div>
               </div>
             </div>
-            <div class="content-row">
-              <div class="row-left row-6">
-                <div class="movie-item row-4">
-                  <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
-                </div>
-                <div class="movie-item row-6">
-                  <div class="movie-level y12">護6級</div>
-                  <div class="movie-title">
-                    <p class="l-font">劫命救護</p>
-                    <span>AMBULANCE</span>
-                  </div>
-                  <div class="up-date">上映日期 2022-03-25</div>
-                  <div class="list-item">
-                    <div class="list-row">導演<div><span>麥可貝</span></div>
-                    </div>
-                    <div class="list-row">演員<div><span>傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
-                    </div>
-                    <div class="list-row">類型<div><span>動作、懸疑、驚悚、劇情</span></div>
-                    </div>
-                    <div class="list-row">片長<div><span>136分鐘</span></div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row-right row-4">
-                <div class="weektable">
-                  <div class="booktime active">08.08<span>星期一</span></div>
-                  <div class="booktime">08.09<span>星期二</span></div>
-                  <div class="booktime">08.10<span>星期三</span></div>
-                  <div class="booktime">08.11<span>星期四</span></div>
-                  <div class="booktime">08.12<span>星期五</span></div>
-                  <div class="booktime">08.13<span>星期六</span></div>
-                  <div class="booktime">08.14<span>星期日</span></div>
-                </div>
-                <div class="cinema">
-                  <span class="material-icons">
-                    video_call
-                  </span>數位標準
-                </div>
-                <div class="timetable">
-                <div class="time disable"><a class="" href="">09:00</a></div>
-                <div class="time active"><a class="" href="book-step1.html">09:00</a></div>
-                <div class="time"><a class="" href="">09:00</a></div>
-                <div class="time"><a class="" href="">09:00</a></div>
-                <div class="time"><a class="" href="">09:00</a></div>
-                <div class="time"><a class="" href="">09:00</a></div>
-                <div class="time"><a class="" href="">09:00</a></div>
-                <div class="time"><a class="" href="">09:00</a></div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="tab-content hide" data-id="tab2">
             <div class="content-row">
               <div class="row-left row-6">
                 <div class="movie-item row-4">
@@ -174,20 +140,19 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <div class="time disable"><a class="" href="">09:00</a></div>
-                  <div class="time active"><a class="" href="book-step1.html">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
-                  <div class="time"><a class="" href="">09:00</a></div>
+                <div class="time disable"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
+                <div class="time"><span>09:00</span></div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
+       </div>
     </section>
   </main>
   <!-- main container -->
